<resources>

    <string name="app_name">Meetable</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="new_meeting">Hold a meeting</string>
    <string name="event_name_prompt">Meeting Name</string>
    <string name="add_people_prompt">Invite People</string>
    <string name="prefered_contact_prompt">Prefered Contact Method</string>
    <string name="texting_option">Text Message</string>
    <string name="email_option">Email</string>
    <string name="invisible">Invisible</string>
    <string name="start_time">Earliest possible start:</string>
    <string name="stop_time">Latest possible end :</string>
    <string name="add_person">Add Person</string>
    <string name="launch_invites">Send</string>
    <string name="auto_select">Automatically choose meeting time when multiple times possible</string>
    <string name="host_name_prompt">Your Name</string>
</resources>